<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:flow_horizontalAlign="center">
    <ImageView
        android:id="@+id/image_slide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/logonike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spring_prev_ui1"
        android:contentDescription="@string/slider_image"
        android:layout_marginBottom="26dp"
        />
    <TextView
        android:id="@+id/heading_slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_onBoarding1"
        android:textColor="#1A2530"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />
    <TextView
        android:id="@+id/title_slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_onBoarding1"
        android:textColor="#707B81"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />
</LinearLayout>